# ChangeLog for dev-ruby/ffi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ffi/ChangeLog,v 1.74 2014/09/19 09:28:13 jer Exp $

  19 Sep 2014; Jeroen Roovers <jer@gentoo.org> ffi-1.9.3.ebuild:
  Stable for HPPA (bug #523186).

*ffi-1.9.3-r1 (19 Sep 2014)

  19 Sep 2014; Hans de Graaff <graaff@gentoo.org> ffi-1.9.3.ebuild,
  +ffi-1.9.3-r1.ebuild:
  Add new revision to create a stable candidate.

  13 Aug 2014; Raúl Porcel <armin76@gentoo.org> ffi-1.9.3.ebuild:
  Add ~sparc wrt #468536

  21 Jul 2014; Manuel Rüger <mrueg@gentoo.org> -ffi-1.1.5.ebuild:
  Cleanup old.

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org> ffi-1.4.0.ebuild:
  Stable on alpha, bug #493780

  16 Jun 2014; Tobias Klausmann <klausman@gentoo.org> ffi-1.9.3.ebuild:
  Keyworded on alpha, bug #465948

  07 Jun 2014; Hans de Graaff <graaff@gentoo.org> ffi-1.9.3.ebuild:
  Respect CC, CFLAGS, LDFLAGS for tests. Don't automatically enable ccache.
  Hopefully fixes build issues for hppa, bug 512610.

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> ffi-1.1.5.ebuild,
  ffi-1.4.0.ebuild:
  Remove ruby18 target.

  20 Apr 2014; Hans de Graaff <graaff@gentoo.org> ffi-1.9.3.ebuild:
  Add ruby21.

  01 Feb 2014; Akinori Hattori <hattya@gentoo.org> ffi-1.4.0.ebuild:
  ia64 stable wrt bug #493780

  29 Jan 2014; Akinori Hattori <hattya@gentoo.org> ffi-1.9.3.ebuild:
  keyword ~ia64 wrt bug #465948

  05 Jan 2014; Hans de Graaff <graaff@gentoo.org> ffi-1.1.5.ebuild,
  ffi-1.4.0.ebuild, ffi-1.9.3.ebuild:
  Restore ruby18 target, fixing 496836.

  01 Jan 2014; Patrick Lauer <patrick@gentoo.org> ffi-1.1.5.ebuild,
  ffi-1.4.0.ebuild, ffi-1.9.3.ebuild:
  Remove ruby18 target as dependencies lost support already

  26 Dec 2013; Markus Meier <maekke@gentoo.org> ffi-1.4.0.ebuild:
  arm stable, bug #493780

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ffi-1.4.0.ebuild:
  Stable for sparc, wrt bug #487750
