@@ -3,15 +3,17 @@ Hash: SHA256
 
 DIST ffi-git-1.4.0.tgz 889839 SHA256 696d58704ed002c32b53fb83db5cd985058a2839f04e7228e00ca60f06855948 SHA512 f99d47a450b90a1c10a5db54b0421b8a6a01564144443429fb8071940ef7020130b5b8f71c0198e0b15a6cbc61742b2cd3ef60a92f5c3cc4077e9c2074ac771c WHIRLPOOL 64300f19741ed59b44424cb68eac42cb886826d3019f533c8548c14e626cb5fa3c998337227c83a0e90a7e0700526e12e4e3a84b29fa6f2fdb2d98ca93693488
 DIST ffi-git-1.9.3.tgz 881344 SHA256 f8cc0a05b682eac330fbd0c4f76c9fbf6338a7c32bd3cb5b1619506678ce5c7a SHA512 56c5d4ab13f8ce4038a614470a82a3c723d90e6cc9cb3423efdcd8b1a5f4f3f9f01a0fe335fe088e207818f541184256e20f81fea24c1fe449ed3382e45f9af3 WHIRLPOOL ba412d79cea3f0077048d388bcc94ae25552aada3b5261e44f1ff30245c4cc531be86272b1e3eaf59c215b429aeaab7ad72804de9d31016acec2c6099679096a
+DIST ffi-git-1.9.4.tgz 895806 SHA256 1a619839e81ecdd6e40f03f6f8214beb701b7bc4a188b77f87d6dac3e8a3bd02 SHA512 094316fa71cd2b74a01b5b3c65c6e46f4cba242d43f99c366c297bcbe11d9444d19c32c6b3398e827500133df0cb5a40d44321eb8fae7422d235f964323f03bb WHIRLPOOL 7719b45aec85f38ed80d20a757865bf186672f27644f7a02c4e460a617ef716bcabcdcf5bb802921a907955683dc255c01ff08062aae95f9f18871155485fc58
 EBUILD ffi-1.4.0.ebuild 1283 SHA256 7ac4374ec4d6c8387f8759d1a6868c883cf49080bf46021dbeeccafedb8c4219 SHA512 ffaca73c278f727a15d833b02cf7bc41405dc15d488a5520f8a97c2091ab4ecd0d730107bc7845320559d395bbd2c2b4a98cdae8bd6fbb558c22c45dc0c50311 WHIRLPOOL 998173001f74439939d6a3fa8874935f6705caa6be53acfc8a20cfa379cf82485855c0003a1928e6fe7afe238b5855fb8b8512376c34fb6a5f22a28a5d44a2f3
 EBUILD ffi-1.9.3-r1.ebuild 1631 SHA256 daec8abed6e7ecf51f1f8f8550e863263ec1032af288af6335b3d54e3a893dd5 SHA512 35d667e57f86c0c134081d4445c0e357cf587270097a3aa377fa80a196e3cc7b08c8b54c73e41af0e69422ce8c6f9855484600e0791f98cfc2369c81bdda1dfe WHIRLPOOL 6111c8a6b048832c472d5dcb643e172e914488ef0f931cb230f2c71bf243f61e93c4d81a89bd0ad267fdfe7d3492c39aa0d62b15633d7b0c06d95a872309abed
 EBUILD ffi-1.9.3.ebuild 1618 SHA256 5c76157358fdf8bfe259a60c65c05192c29d283144fa6fb59101d8cc39d6fea6 SHA512 9a04b7f26819f31e4a8dfa76d1e993803c14e7ada994587e30bfb080a6f93d6b471e027277b0a6dcea5f8d5e02375f90d00736f9456140a2bd1b6dea534726ed WHIRLPOOL 7aa197a5d5ab5004c5d344b5366700c0f1aab62213fd53bb35297c699c61f61f517a0356cc761bdcd50a84a7c23fef5ef6a079a65a988f1b030fad7892d0a2dd
-MISC ChangeLog 9582 SHA256 2edeea398985fc7bba1d5e7d9a5587e5910958827bf9730d7f59039644e28107 SHA512 156174331158e2da8289f94d84fefb9ac2051ffbe1ee301362a7b3a6c9fb5d7088bc690a352dec3cf93a49ad8fa6bc73c59e476ec88d907a3791b92f77170ea8 WHIRLPOOL 3104fc56b9435f81653f933ce0b223b38e697cf57cf0749c802c713d9e40218ef56393f174ec112bef17b1495dddbdbc54086db3dcf6e0802c028f3d7bb20a76
+EBUILD ffi-1.9.4.ebuild 1628 SHA256 a11097ba85ead29e8283d12ba8c13d711597d22c1ea139456799aee48ae3d721 SHA512 34c4a84fa6476a0f97fe57e679a1cbf275443f154d0ae2cab76283b227b80b7a7da2a2c1c9f0573d5ecaa4cb645ddf665268001e2d535a22f918d7ad7ce836b8 WHIRLPOOL ec8f2148f02464dafe448c3fc7b470778e1e91f40727cf4424029bb154e09b70b0de773a899df0432be32424a67bcf0f81fe479ecc32a7e7adf3367ecbd3333c
+MISC ChangeLog 9697 SHA256 6eec20be4c2196cc3bfc6cf48564ac0916709bc4d9fa0bb1127222083cfbb900 SHA512 fa81c8d3cb4543a57d599288922f3fd450ee3575b0e7e47366ee566b7aabb4a95062626e9622c3df047e0dd36db92191218eb68dd95fce86099b5132b3dab727 WHIRLPOOL 15d3f890d3ce7381a07319798228b9ea2b07ec3bb2e984c939f558a904e5aa3b5b18666216e6579680dc29530dca3e780fa8bbf7c55301ced6f2ada7e45bbdff
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQb9y4ACgkQVWmRsqeSphNW9wCfTJv10uv28S3VWdiUQ1KLUAjB
-OVYAn2bAcMpn40i+yhLDxW+PYPFbdA4O
-=2HfD
+iF0EAREIAAYFAlQiaPAACgkQiIP6VqMIqNcF7AD9Gp9ZjsvQuUvbCSr00wUpcDn2
+qFfB+GzfkpGPvSmFdMYA90LBGVpAbiwKLHBJMfAD4K7Q4A7sSXNiE63crNL9/D4=
+=e9cA
 -----END PGP SIGNATURE-----
