@@ -1,0 +1,61 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ffi/ffi-1.9.4.ebuild,v 1.1 2014/09/24 06:47:06 graaff Exp $
+
+EAPI=5
+
+# jruby → unneeded, this is part of the standard JRuby distribution, and
+# would just install a dummy.
+USE_RUBY="ruby19 ruby20 ruby21"
+
+RUBY_FAKEGEM_TASK_TEST="specs"
+
+RUBY_FAKEGEM_TASK_DOC="doc:yard"
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="README.md"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Ruby extension for programmatically loading dynamic libraries"
+HOMEPAGE="http://wiki.github.com/ffi/ffi"
+
+SRC_URI="http://github.com/${PN}/${PN}/archive/${PV}.tar.gz -> ${PN}-git-${PV}.tgz"
+
+IUSE=""
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x86-solaris"
+
+RDEPEND+=" virtual/libffi"
+DEPEND+=" virtual/libffi"
+
+ruby_add_bdepend "dev-ruby/rake-compiler dev-ruby/yard
+	test? ( dev-ruby/rspec:2 )"
+
+ruby_add_rdepend "virtual/ruby-threads"
+
+all_ruby_prepare() {
+	sed -i -e '/tasks/ s:^:#:' \
+		-e '/Gem::Tasks/,/end/ s:^:#:' Rakefile || die
+
+	# Fix Makefile for tests
+	sed -i -e '/CCACHE :=/ s:^:#:' \
+		-e 's/-O2//' \
+		-e 's/^CFLAGS =/CFLAGS +=/' libtest/GNUmakefile || die
+}
+
+each_ruby_compile() {
+	${RUBY} -S rake compile || die "compile failed"
+	${RUBY} -S rake -f gen/Rakefile || die "types.conf generation failed"
+}
+
+each_ruby_test() {
+	CC=$(tc-getCC) CFLAGS="${CFLAGS}" LDFLAGS="${LDFLAGS}" ${RUBY} -S rake specs || die
+}
+
+all_ruby_install() {
+	all_fakegem_install
+
+	docinto examples
+	dodoc samples/*
+}
