@@ -1,15 +1,15 @@
 DEFINED_PHASES=compile configure install postinst prepare
-DEPEND=>=sys-libs/ncurses-5.7-r6 kernel_Darwin? ( dev-perl/Mac-Pasteboard ) media-libs/fontconfig perl? ( dev-lang/perl ) pixbuf? ( x11-libs/gdk-pixbuf x11-libs/gtk+:2 ) startup-notification? ( x11-libs/startup-notification ) x11-libs/libX11 x11-libs/libXrender xft? ( x11-libs/libXft ) virtual/pkgconfig x11-proto/xproto !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
+DEPEND=>=sys-libs/ncurses-5.7-r6 kernel_Darwin? ( dev-perl/Mac-Pasteboard ) media-libs/fontconfig perl? ( dev-lang/perl:= ) pixbuf? ( x11-libs/gdk-pixbuf x11-libs/gtk+:2 ) startup-notification? ( x11-libs/startup-notification ) x11-libs/libX11 x11-libs/libXrender xft? ( x11-libs/libXft ) virtual/pkgconfig x11-proto/xproto !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
 DESCRIPTION=rxvt clone with xft and unicode support
-EAPI=4
+EAPI=5
 HOMEPAGE=http://software.schmorp.de/pkg/rxvt-unicode.html
 IUSE=256-color alt-font-width blink buffer-on-clear +focused-urgency fading-colors +font-styles iso14755 +mousewheel +perl pixbuf secondary-wheel startup-notification xft unicode3 +vanilla wcwidth
 KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris
 LICENSE=GPL-2
-RDEPEND=>=sys-libs/ncurses-5.7-r6 kernel_Darwin? ( dev-perl/Mac-Pasteboard ) media-libs/fontconfig perl? ( dev-lang/perl ) pixbuf? ( x11-libs/gdk-pixbuf x11-libs/gtk+:2 ) startup-notification? ( x11-libs/startup-notification ) x11-libs/libX11 x11-libs/libXrender xft? ( x11-libs/libXft )
+RDEPEND=>=sys-libs/ncurses-5.7-r6 kernel_Darwin? ( dev-perl/Mac-Pasteboard ) media-libs/fontconfig perl? ( dev-lang/perl:= ) pixbuf? ( x11-libs/gdk-pixbuf x11-libs/gtk+:2 ) startup-notification? ( x11-libs/startup-notification ) x11-libs/libX11 x11-libs/libXrender xft? ( x11-libs/libXft )
 REQUIRED_USE=vanilla? ( !alt-font-width !buffer-on-clear focused-urgency !secondary-wheel !wcwidth )
 RESTRICT=test
 SLOT=0
 SRC_URI=http://dist.schmorp.de/rxvt-unicode/Attic/rxvt-unicode-9.20.tar.bz2
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	32548a82e42dc26e3312581476d2f20c	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=b93034b8038c40b5c9d7834304e48882
+_md5_=f214107beb3113269fee9007b7d3b10b
