@@ -10,13 +10,13 @@ AUX rxvt-unicode-9.14-clear.patch 937 SHA256 c1010b15d74f56671351e8314264d76f638
 AUX rxvt-unicode-9.15-xsubpp.patch 632 SHA256 d65c0c1e403e019c882c6f95ebbe74098168795b6a9d44f4b5df82ff45bef864 SHA512 b02a7bb8642196aede63b6dd9f19b054fb4048132bb99a3bec6c2625c907289c98defb84f52b2721efe738821bbaa6e2d352f9bc6d5f1e511cacc45f70815b65 WHIRLPOOL 2c9fc89cb36d6c0f986210969db8e02930d2de369aecfa87b6112ef9edf4bf124e92a4e0a7d0de886d97e733f6c7fc8e51c2afc92be62894151e4b82f0d11eac
 AUX rxvt-unicode-9.19-secondary-wheel.patch 5009 SHA256 1fcc9ecb433fe4ab7568d2ac66199ad112b2f5d685489b7f5fd8b4a9dbf3827a SHA512 adf2b3e48041fddec1ebd617e5d15226d40bfa55e9fb57af3d70084ef44d1110641f393921932c0613a03fe9cba34cf78f0e022b56c522610fc5cd8e24ec0db9 WHIRLPOOL 3a7d0231f843b3949cbfe274c4d95bc8d0041e9258b2cad04a9ec39155d5ed6ed3957453c1a6980e47d133a94cc2fc504e4bddfdb74e0b9345b9d34390a8c07a
 DIST rxvt-unicode-9.20.tar.bz2 916598 SHA256 e73e13fe64b59fd3c8e6e20c00f149d388741f141b8155e4700d3ed40aa94b4e SHA512 39e1574f7b7034c07ab2e836bb77e0fb0536830df873cc54e6c7583be5e20d36dea3fe0fc889283f163530c77534a3a55de227ee0a8f03564d0f030e60461ff9 WHIRLPOOL a9388b39a0e59375dd56fe03d071d520249fcce98db4ad9ffe8a86aa1ab0a4b132b3fe00d4499bd8c285d327dfc08b3de874b2e7004a487395d5b2872fe63a1b
-EBUILD rxvt-unicode-9.20.ebuild 3985 SHA256 d57568c76bd9b36cbad08c7683418ee035000c5bbebc6d5995520e287df8b468 SHA512 719a1148db3441f721eea1adb05bbb680851d90c611ae91cea26c7f92ada885c20afd883eff2c8b0b4b9fb3876aaa7766730e60d8ea734450666c91565a3cc10 WHIRLPOOL ddb3df65d130e22e01af1e1dbedee53aad8c151b3f02175b2266cd95b3c8648b31e66684857538f478024bbe9901070ac36ca2788e526e2d1d50cabcc5cc7890
-MISC ChangeLog 38786 SHA256 e3d89d462e0d422a28544a37833a1ba3b8468955241ef95124144fc85ca08019 SHA512 e582413da732ba995cf3eec8a32d267961eebb605f77bab975668dbb5be2849fc9ebe4bc1558ffbd202e2bc964c914bf0fcd45838cc7c53697f6d5787285a641 WHIRLPOOL 7e3fc0a1d037d0859fda6b81a4fbbf2677a5b2c0e5e0091d8c3c8da71d3f50f9fd8355efe8b6d91d51704a2a06b362a86f740816b0ff33ec5795f418ffcf327e
+EBUILD rxvt-unicode-9.20.ebuild 3987 SHA256 3e30b665c0ef033972a8ab5bb2e04a496db8b42155a43913c61462956ba25fe4 SHA512 9da37a928dcb05f239507d91d4f69b461568c00bf2f71285ec58ee12b47ce3081f7f9ad07015afa24f67b8124515a50d1e66e4d5822aec71544efe8db80e9d6d WHIRLPOOL bfdaf59d5fc92e0bdff9d6dbfe826b52ed1ef06e66cac1dd817b06e6eb8a0e9f6c10e92dadcbbdf2e5d559df251603dd92c2c9d9b5239e0a6ff67ddbe06f27d0
+MISC ChangeLog 38914 SHA256 21e3a861fb5928722c9e62669b1476cb4bc1aa83bbd1310c77b208201eb252e9 SHA512 1cf267dd53dd44dfa7cd90be9edd4682a74bcf84f328291e6eddd31ef216d7b64fb81a6ee5e60385600b0522b566d7f23ca2d2ef5214c84c739aab354dc635f1 WHIRLPOOL dfd76e0120ffff92323608d9b9a9075a26940419956b22188221fecf03c73f683069dbfd2a49a87f62824b0b31b09bc85db36781abdd3c0df8896f5513254bc4
 MISC metadata.xml 1636 SHA256 5e8498232601990ace2e1e4db6ebc972a844fd882de2f20970aec732d56f141b SHA512 f5f3356f0a04fd085820079a89664e0c1d77a7d92672fec8aff1553c23258ff82197a2ada605d3911ef1b3d9db665cfc6c07781fe164a3ba05b1c0c5dd3be52e WHIRLPOOL 2fbb49aaa249402a25b8b5ff98e24d3c359492229aa6d139906bb501b29632978a82cd6a9153ef6e3af07c6c575131e674a925cb83cf775fd9a98d6c0cb6ab7e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlOuwJYACgkQVWmRsqeSphNn2gCeMZM2G9F46BV2GPRmF+m9GiC8
-cKYAn0dLyZd36Qr+r8l13am5YrwjTqYv
-=xHO0
+iEYEAREIAAYFAlQibCIACgkQVWmRsqeSphOBAQCeJED+Iyqu1yHTpGQT9LHnEO4U
+qFUAn1/uw0KLHQ9Mybo3MzQ9gTETTMUj
+=2fqX
 -----END PGP SIGNATURE-----
