@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/rxvt-unicode
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.265 2014/06/28 13:18:13 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.266 2014/09/24 07:00:49 jer Exp $
+
+  24 Sep 2014; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.20.ebuild:
+  EAPI bump, depend on dev-lang/perl:= (bug #523582).
 
   28 Jun 2014; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.20.ebuild:
   Always apply user patches.
